Uploaded image for project: 'Mesos'
  1. Mesos
  2. MESOS-5172

Registry puller cannot fetch blobs correctly from http Redirect 3xx urls.

    XMLWordPrintableJSON

Details

    Description

      When the registry puller is pulling a private repository from some private registry (e.g., quay.io), errors may occur when fetching blobs, at which point fetching the manifest of the repo is finished correctly. The error message is `Unexpected HTTP response '400 Bad Request' when trying to download the blob`. This may arise from the logic of fetching blobs, or incorrect format of uri when requesting blobs.

      Attachments

        Issue Links

          Activity

            People

              gilbert Gilbert Song
              gilbert Gilbert Song
              Jie Yu Jie Yu
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: