Support 'Basic' auth docker registry on Unified Containerizer.

This patch implements the support for 'Basic' docker registry
authorization. It is tested by a local authenticated private
registry using 'localhost:443/alpine' docker image.
Please note that the AWS ECS uses Basic authorization but it
does not work yet due to the redirect issue MESOS-5172.

Review: https://reviews.apache.org/r/54537/